# adgs

./: AUTHORS  LICENSE  README.md  compose.yml
adgsboa/boa/: README.md  generate_docker_image.sh  init_docker_dev_environment.sh
adgsdoc/: Dockerfile  README.md  setssl.sh
auxip/: Dockerfile.adgs.auxip.localhost.dev.yaml  Dockerfile.adgs.auxip.localhost.yaml  Dockerfile.adgs.minarc.localhost.yaml  README.md  compose_auxip.yml  compose_auxip_dev.yml  requirements.txt  setup.py
auxip/api/: .flake8  README.md  pyproject.toml  requirements.txt
auxip/api/auxip_backend/: config.py  crud.py  database.py  main.py  models.py  schemas.py
auxip/api/auxip_backend/crud/: crud_products.py  crud_subscriptions.py
auxip/api/auxip_backend/models/: products.py  subscriptions.py
auxip/api/auxip_backend/routers/: products.py  subscription_notification_endpoint.py  subscriptions.py  test_api.py
auxip/api/auxip_backend/schemas/: subscriptions.py
auxip/api/test/: README.md  main_test_integration.py  main_test_unit.py  test_main.py
auxip/auxip/: config.py  database.py  errors.py  logger.py  main.py
auxip/env/: localhost_env  localhost_env_dev
auxip/frontend/: database.py  main.py
auxip/jmeter/: auxip_dev_test_plan.jmx
dec/: Dockerfile.adgs.dec.localhost.yaml  README.md
dec/install/: dec_latest.gem
env/: localhost_env  ovh_demo_env
frontend/: Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  compose_dev.yml  setup.py
grafana/: grafana.ini
minarc/: Dockerfile.adgs.minarc.localhost.yaml  README.md
prometheus/: prometheus.yml
security/: README.md  compose.yml
(+109 files in other folders)
