[tool.poetry]
name = "api-auxip"
version = "0.0.0"
description = "adgs auxip package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.30.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
sqlalchemy-guid = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
